所有数据模块化处理
