# docs/swagger.yaml
@@ -1,9 +1,18 @@
-basePath: 这里写base path
-host: 这里写接口服务的host
+basePath: /api/v1
+definitions:
+  models.Response:
+    properties:
+      data:
+        description: 响应数据
+      msg:
+        description: 响应消息
+        type: string
+    type: object
+host: localhost:9090
 info:
   contact:
     email: support@swagger.io
-    name: 这里写联系人信息
+    name: 跑路了
     url: http://www.swagger.io/support
   description: 在东软的教学包基础上去做拓展
   license:
@@ -12,5 +21,378 @@ info:
   termsOfService: http://swagger.io/terms/
   title: 饿了么项目复刻
   version: "1.0"
-paths: {}
+paths:
+  /api/v1/comments/orders/{order_id}:
+    post:
+      consumes:
+        - application/json
+      description: 用户为指定id的订单添加评价
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 用户评价订单
+      tags:
+        - 评价管理
+  /api/v1/orders/{order_id}:
+    delete:
+      consumes:
+        - application/json
+      description: 取消指定id的订单
+      parameters:
+        - description: 订单id
+          in: path
+          name: order_id
+          required: true
+          type: integer
+      produces:
+        - application/json
+      responses:
+        "204":
+          description: succeed
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 取消订单
+      tags:
+        - 订单管理
+    get:
+      consumes:
+        - application/json
+      description: 获取指定id的订单详情
+      parameters:
+        - description: 订单id
+          in: path
+          name: order_id
+          required: true
+          type: integer
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: OrderDetailResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 获取订单详情
+      tags:
+        - 订单管理
+  /api/v1/riders/orders/{order_id}/accept:
+    post:
+      consumes:
+        - application/json
+      description: 骑手接收指定id的订单
+      parameters:
+        - description: 订单id
+          in: path
+          name: order_id
+          required: true
+          type: integer
+      produces:
+        - application/json
+      responses:
+        "204":
+          description: 接单成功
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 骑手接单
+      tags:
+        - 骑手管理
+  /api/v1/riders/orders/{order_id}/complete:
+    post:
+      consumes:
+        - application/json
+      description: 骑手完成指定id的订单
+      parameters:
+        - description: 订单id
+          in: path
+          name: order_id
+          required: true
+          type: integer
+      produces:
+        - application/json
+      responses:
+        "204":
+          description: 订单完成
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 骑手完成订单
+      tags:
+        - 骑手管理
+  /dishes:
+    get:
+      description: 获取所有菜品列表
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: 获取成功
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 列出所有菜品
+  /dishes/{dish_id}:
+    get:
+      description: 根据 ID 获取菜品信息
+      parameters:
+        - description: 菜品 ID
+          in: path
+          name: dish_id
+          required: true
+          type: integer
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Dish
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 获取菜品信息
+  /merchant/add:
+    post:
+      consumes:
+        - multipart/form-data
+      description: 添加商家
+      parameters:
+        - description: 餐厅名称
+          in: formData
+          name: name
+          required: true
+          type: string
+        - description: 餐厅地址
+          in: formData
+          name: address
+          required: true
+          type: string
+        - description: 餐厅电话
+          in: formData
+          name: phone
+          required: true
+          type: string
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: 添加成功
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: 添加失败
+          schema:
+            $ref: '#/definitions/models.Response'
+        "401":
+          description: 输入非法
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 添加商家
+  /merchant/fuzzy:
+    get:
+      description: 根据商家名称模糊搜索商家信息
+      parameters:
+        - description: 商家名称
+          in: query
+          name: name
+          required: true
+          type: string
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Merchant
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 模糊搜索商家信息
+  /merchant/list:
+    get:
+      description: 获取所有商家列表
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 列出所有商家
+  /merchant/perfect:
+    get:
+      description: 根据商家名称获取商家信息
+      parameters:
+        - description: 商家名称
+          in: query
+          name: name
+          required: true
+          type: string
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Merchant
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 准确获取商家信息
+  /orders:
+    get:
+      description: 获取所有订单列表
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: succeed
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 列出所有订单
+    post:
+      consumes:
+        - application/json
+      description: 用户创建新订单
+      parameters:
+        - description: 新订单信息
+          in: body
+          name: order
+          required: true
+          schema:
+            type: string
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Order
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 创建订单
+  /users:
+    post:
+      consumes:
+        - application/json
+      description: 创建新用户
+      parameters:
+        - description: 新用户信息
+          in: body
+          name: user
+          required: true
+          schema:
+            type: string
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: User
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 创建用户
+  /users/login:
+    post:
+      consumes:
+        - application/json
+      description: 用户使用用户名和密码登录
+      parameters:
+        - description: 用户登录信息
+          in: body
+          name: login
+          required: true
+          schema:
+            type: string
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: User
+          schema:
+            $ref: '#/definitions/models.Response'
+        "400":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 用户登录
+  /users/logout:
+    post:
+      description: 用户登出
+      produces:
+        - application/json
+      responses:
+        "204":
+          description: 退出成功
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: ErrorResponse
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: 用户登出
 swagger: "2.0"
